[package]
name = "criterion-history"
version = "0.1.0"
authors = ["Peter Taylor <PTaylor@FluenTech.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
plotters = { version = "0.2.15", default_features = false, features = ["datetime", "svg", "line_series", "errorbar", "point_series"] }
chrono = "0.4.13"
#serde = { version = "1.0.114", features = ["derive"] }